--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
