--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.0",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
+    "formik": "^2.4.5",
     "next": "14.0.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
